[gd_scene load_steps=11 format=3 uid="uid://m4k7wadefeb0"]

[ext_resource type="Script" path="res://Players/rogue.gd" id="1_1eet0"]
[ext_resource type="Texture2D" uid="uid://brgufd781s1l3" path="res://icon.svg" id="2_u81ud"]
[ext_resource type="Script" path="res://hitbox.gd" id="3_ojjqm"]
[ext_resource type="Script" path="res://Players/HitboxA.gd" id="4_smwk1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lcyq7"]
radius = 66.0
height = 132.0

[sub_resource type="Animation" id="Animation_6lsb1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("swordpivot/sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("swordpivot/sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, 26)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("swordpivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("swordpivot/sword:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("swordpivot/sword/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_671u1"]
resource_name = "slash"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("swordpivot/sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("swordpivot/sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(24, 26), Vector2(-1.90735e-06, 41), Vector2(2.08165e-12, 41), Vector2(24, 26)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("swordpivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 1, 1.3, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.5708, 4.71239, 4.71239, 1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("swordpivot/sword:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.7, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 0.5), Vector2(1, -0.5), Vector2(1, -0.5), Vector2(1, 0.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("swordpivot/sword/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4do4c"]
_data = {
"RESET": SubResource("Animation_6lsb1"),
"slash": SubResource("Animation_671u1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewaqo"]
size = Vector2(45, 45)

[sub_resource type="CircleShape2D" id="CircleShape2D_2eq4r"]

[node name="Rogue" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_1eet0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-6.10352e-05, -9.15527e-05)
scale = Vector2(0.35, 0.336)
texture = ExtResource("2_u81ud")

[node name="swordpivot" type="Node2D" parent="."]
rotation = 1.5708

[node name="sword" type="CharacterBody2D" parent="swordpivot"]
position = Vector2(24, 26)
rotation = 0.174533
scale = Vector2(1, 0.5)
collision_layer = 4
collision_mask = 4
script = ExtResource("3_ojjqm")

[node name="Sprite2D" type="Sprite2D" parent="swordpivot/sword"]
position = Vector2(0, -28)
scale = Vector2(0.125, 0.9)
texture = ExtResource("2_u81ud")

[node name="CollisionShape2D" type="CollisionShape2D" parent="swordpivot/sword"]
position = Vector2(0, -28)
scale = Vector2(0.15, 0.9)
shape = SubResource("CapsuleShape2D_lcyq7")
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_4do4c")
}

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_ewaqo")

[node name="Buffbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buffbox"]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_ewaqo")

[node name="Slash" type="Node" parent="."]

[node name="CooldownSlashTimer" type="Timer" parent="Slash"]

[node name="Knife" type="Node" parent="."]

[node name="CooldownKnifeTimer" type="Timer" parent="Knife"]

[node name="Backstab" type="Node" parent="."]

[node name="AppearBackstabTimer" type="Timer" parent="Backstab"]
one_shot = true

[node name="CooldownBackstabTimer" type="Timer" parent="Backstab"]
one_shot = true

[node name="AttackBackstabTimer" type="Timer" parent="Backstab"]
one_shot = true

[node name="SilentClaw" type="Node" parent="."]

[node name="AppearSilentClawTimer" type="Timer" parent="SilentClaw"]
one_shot = true

[node name="AttackSilentClawTimer" type="Timer" parent="SilentClaw"]
one_shot = true

[node name="CooldownSilentClawTimer" type="Timer" parent="SilentClaw"]
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource("4_smwk1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_2eq4r")
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_hurtbox_area_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="area_entered" from="Buffbox" to="." method="_on_buffbox_area_entered"]
[connection signal="timeout" from="Slash/CooldownSlashTimer" to="." method="_on_cooldown_slash_timer_timeout"]
[connection signal="timeout" from="Knife/CooldownKnifeTimer" to="." method="_on_cooldown_knife_timer_timeout"]
[connection signal="timeout" from="Backstab/AppearBackstabTimer" to="." method="_on_appear_backstab_timer_timeout"]
[connection signal="timeout" from="Backstab/CooldownBackstabTimer" to="." method="_on_cooldown_backstab_timer_timeout"]
[connection signal="timeout" from="Backstab/AttackBackstabTimer" to="." method="_on_attack_backstab_timer_timeout"]
[connection signal="timeout" from="SilentClaw/AppearSilentClawTimer" to="." method="_on_appear_silent_claw_timer_timeout"]
[connection signal="timeout" from="SilentClaw/AttackSilentClawTimer" to="." method="_on_attack_silent_claw_timer_timeout"]
[connection signal="timeout" from="SilentClaw/CooldownSilentClawTimer" to="." method="_on_cooldown_silent_claw_timer_timeout"]
